@@ -57,11 +57,9 @@ def send_email(addresses_to, ctx_dict, subject_template, body_template,
     """
     Function that sends an email
     """
-    subject = (
-        getattr(settings, 'REGISTRATION_EMAIL_SUBJECT_PREFIX', '') +
-        render_to_string(
-            subject_template, ctx_dict)
-    )
+
+    prefix = getattr(settings, 'REGISTRATION_EMAIL_SUBJECT_PREFIX', '')
+    subject = prefix + render_to_string(subject_template, ctx_dict)
     # Email subject *must not* contain newlines
     subject = ''.join(subject.splitlines())
     from_email = get_from_email(ctx_dict.get('site'))
@@ -269,9 +267,13 @@ class RegistrationManager(models.Manager):
         be deleted.
 
         """
-        for profile in self.all():
+        profiles = self.filter(
+            models.Q(user__is_active=False) | models.Q(user=None),
+            activated=False,
+        )
+        for profile in profiles:
             try:
-                if profile.activation_key_expired() and not profile.activated:
+                if profile.activation_key_expired():
                     user = profile.user
                     logger.warning('Deleting expired Registration profile {} and user {}.'.format(profile, user))
                     profile.delete()
@@ -350,10 +352,10 @@ class RegistrationProfile(models.Model):
            method returns ``True``.
 
         """
-        expiration_date = datetime.timedelta(
+        max_expiry_days = datetime.timedelta(
             days=settings.ACCOUNT_ACTIVATION_DAYS)
-        return (self.activated or
-                (self.user.date_joined + expiration_date <= datetime_now()))
+        expiration_date = self.user.date_joined + max_expiry_days
+        return self.activated or expiration_date <= datetime_now()
 
     def send_activation_email(self, site, request=None):
         """
@@ -418,9 +420,11 @@ class RegistrationProfile(models.Model):
             'expiration_days': settings.ACCOUNT_ACTIVATION_DAYS,
             'site': site,
         }
-        subject = (getattr(settings, 'REGISTRATION_EMAIL_SUBJECT_PREFIX', '') +
-                   render_to_string(
-                       activation_email_subject, ctx_dict, request=request))
+        prefix = getattr(settings, 'REGISTRATION_EMAIL_SUBJECT_PREFIX', '')
+        subject = prefix + render_to_string(
+            activation_email_subject, ctx_dict, request=request
+        )
+
         # Email subject *must not* contain newlines
         subject = ''.join(subject.splitlines())
         from_email = get_from_email(site)
